--- a/viz/ver-pixi.js.html
+++ b/viz/ver-pixi.js.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf8"/>
-<title>BBO VM Migration</title>
+<title>MBBO VM Migration</title>
 <script type="text/javascript" src="./static/lib/jquery/jquery-2.1.1.js"></script>
 <script type="text/javascript" src="./static/lib/jqueryui/humanlity/jquery-ui.js"></script>
 <script type="text/javascript" src="./static/lib/dat.gui/dat.gui.js"></script>
