mark DOM version no longer maintained

--- a/viz/index.html
+++ b/viz/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>VM Migration Based on MBBO</h1>
-  <p><b>DOM Version</b>: visualization powered by DOM modification. <a href="ver-dom.html">watch this!</a></p>
+  <p><b>DOM Version</b>: visualization powered by DOM modification. <a href="ver-dom.html">watch this!</a> (no longer maintained) </p>
   <p><b>PIXI.js Version</b>: visualization powered by PIXI.js WebGL engine. <a href="ver-pixi.js.html">watch this!</a></p>
 </body>
 </html>
