--- a/viz/ver-pixi.js.html
+++ b/viz/ver-pixi.js.html
@@ -13,28 +13,37 @@
 html,body { margin:0; padding:0; width:100%; height:100%; overflow-y:hidden; }
 
 #main { width:100%; height:100%; overflow-y:none; background:#333333;}
-#dashboard { width:90%; height:400px; position:absolute; left:5%; bottom:5px; background:rgba(0, 0, 0, 0.75); border: 5px solid black; }
+#dashboard { width:90%; height:400px; position:absolute; left:5%;
+  bottom:5px; background:rgba(0, 0, 0, 0.75); border: 5px solid black; }
 #dashboard h2, #dashboard h3, #dashboard h4, #dashboard p, #dashboard a { color: white; padding:0; margin:0; }
 #dashboard #db-header a:hover { color:black; background:white; }
 #dashboard h2 { font-size:1em; border-bottom: 1px dotted #666666; line-height:1.5em; }
 #dashboard h3 { font-size:.9em; }
 #dashboard p { font-size:.8em; text-indent:.2em; }
 #dashboard a { text-decoration:none; }
-#dashboard .db-panel { margin:5px 0 0 5px; width:180px; height:170px; float:left; display:block; background:rgba(0,0,0,0.5); padding:5px; }
+#dashboard .db-panel { margin:5px 0 0 5px; width:180px; height:170px;
+  float:left; display:block; background:rgba(0,0,0,0.5); padding:5px; }
 
-#vmdpanel { position:absolute; top:0; left:0; padding:5px; width:160px; height:160px; background:rgba(0,0,0,0.75); border:2px solid #000000; -moz-border-radius:10px; -webkit-border-radius: 10px; border-radius:10px; }
+#vmdpanel { position:absolute; top:0; left:0; padding:5px; width:160px;
+  height:160px; background:rgba(0,0,0,0.75); border:2px solid #000000;
+  -moz-border-radius:10px; -webkit-border-radius: 10px; border-radius:10px; }
 #vmdpanel h3, #vmdpanel p { color:white; padding:0; margin:0; }
 #vmdpanel h3 { font-size:.9em; }
 #vmdpanel p { font-size:.7em; text-indent:.2em; }
 
-#pmdpanel { position:absolute; top:0; left:0; padding:5px; width:160px; height:160px; background:rgba(0,0,128,0.75); border:2px solid #000080; -moz-border-radius:6px; -webkit-border-radius: 6px; border-radius:6px; }
+#pmdpanel { position:absolute; top:0; left:0; padding:5px; width:160px;
+  height:160px; background:rgba(0,0,128,0.75); border:2px solid #000080;
+  -moz-border-radius:6px; -webkit-border-radius: 6px; border-radius:6px; }
 #pmdpanel h3, #pmdpanel p { color:white; padding:0; margin:0; }
 #pmdpanel h3 { font-size:.9em; }
 #pmdpanel p { font-size:.7em; text-indent:.2em; }
 
-.pm { position:relative; float:left; margin:3px; border:1px dotted #CACACA; width:150px; height:170px; }
-.box { position:relative; top:0; left:0; height:150px; border-bottom:1px dotted #CACACA; background:#FFFFFF; }
-.badge { position:relative; bottom:0; left:0; height:20px; font-size:.5em; text-indent:.5em; background:#EAEAEA; }
+.pm { position:relative; float:left; margin:3px;
+  border:1px dotted #CACACA; width:150px; height:170px; }
+.box { position:relative; top:0; left:0; height:150px;
+  border-bottom:1px dotted #CACACA; background:#FFFFFF; }
+.badge { position:relative; bottom:0; left:0; height:20px;
+  font-size:.5em; text-indent:.5em; background:#EAEAEA; }
 .vm { position:absolute; background:#5DB0E0; }
 .vm-move { background:#FF0000; }
 .vm-available { position:absolute; background:#2CF71F; }
@@ -47,7 +56,10 @@ html,body { margin:0; padding:0; width:100%; height:100%; overflow-y:hidden; }
 
 <div id="dashboard">
   <div id="db-header">
-    <h2><i class="fa fa-dashboard"></i> MBBO Results Status | <a href="javascript:toggle_dashboard(1);" title="Toggle this dashboard"><small>[ toggle ]</small></a> | <a href="javascript:toggle_dashboard(0.5);" title="Toggle 1/2 this dashboard"><small>[ toggle 1/2 ]</small></a></h2>
+    <h2><i class="fa fa-dashboard"></i> MBBO Results Status |
+      <a href="javascript:toggle_dashboard(1);" title="Toggle this dashboard"><small>[ toggle ]</small></a> |
+      <a href="javascript:toggle_dashboard(0.5);" title="Toggle 1/2 this dashboard"><small>[ toggle 1/2 ]</small></a>
+    </h2>
   </div><!-- #db-header -->
   <div id="db-content">
     <div class="db-panel">
@@ -219,7 +231,7 @@ function add_vms_to_pm(new_vms, pm_num) {
     var vm_top = pm.y;
     var vm_left = pm.x;
 
-    console.log("adding vms["+new_vms.length+"] to pm["+pm_num+"]");
+    //console.log("adding vms["+new_vms.length+"] to pm["+pm_num+"]");
 
     for (var i=0;i<new_vms.length;i++) {
         val = new_vms[i];
@@ -363,7 +375,7 @@ function show_pm_detail(pmid) {
     $('#pmdpanel')
         .css('left', x + 'px')
         .css('top', y + 'px')
-        .fadeToggle(100);
+        .fadeToggle(10);
     is_pmdp_shown = true;
 }
 
@@ -372,7 +384,7 @@ function show_pm_detail(pmid) {
  */
 function close_pm_detail(pmid) {
     is_pmdp_shown = false;
-    $('#pmdpanel').fadeToggle(100);
+    $('#pmdpanel').fadeToggle(10);
 }
 
 /**
@@ -403,7 +415,7 @@ function show_vm_detail(vmid) {
     $('#vmdpanel')
         .css('left', x + 'px')
         .css('top', y + 'px')
-        .fadeToggle(100);
+        .fadeToggle(10);
     is_vmdp_shown = true;
 }
 
@@ -412,7 +424,7 @@ function show_vm_detail(vmid) {
  */
 function close_vm_detail(vmid) {
     is_vmdp_shown = false;
-    $('#vmdpanel').fadeToggle(100);
+    $('#vmdpanel').fadeToggle(10);
 }
 
 /**
@@ -422,7 +434,7 @@ function close_vm_detail(vmid) {
  * @param {int} pm_to The number of pm which the vm is about to put
  */
 function mark_move_vm(vm_num, pm_num_from, pm_num_to) {
-    console.log("draw vm "+pm_num_from+" -> " + pm_num_to);
+    //console.log("draw vm "+pm_num_from+" -> " + pm_num_to);
     var vmid = 'vm-' + vm_num;
     vms[vmid]['pm_num_from'] = pm_num_from;
     vms[vmid]['pm_num_to'] = pm_num_to;
@@ -595,6 +607,7 @@ var config = {
     muta_num: 7,
     iter_num: 500,
     gene_num: 5000,
+    data_fn: ['data-demo.json', 'data-mbbo.json'],
     // functions for debug
     init_cluster: function() {
         console.log('generating init data...');
@@ -627,6 +640,12 @@ function init_datgui() {
     f2.add(config, 'muta_num', 5, 20);
     f2.add(config, 'iter_num', 100, 1000);
     f2.add(config, 'gene_num', 100, 10000);
+
+    var f3 = gui.addFolder('History Results');
+    f3.add(config, 'data_fn', config.data_fn)
+      .onFinishChange(function(v) {
+        console.log('load data ' + v);
+      });
 
     gui.add(config, 'init_cluster');
     gui.add(config, 'about');
