--- a/viz/ver-pixi.js.html
+++ b/viz/ver-pixi.js.html
@@ -132,6 +132,11 @@ var pm_num_y = 10;
 
 var vms_num = 200;
 
+var plan = {
+    state0: [],
+    state1: []
+};
+
 // colors
 var clr_background = 0x333333;
 var clr_pm = 0xFFFFFF;
@@ -144,6 +149,9 @@ var clr_vmbox = 0xA66F00;
 // is vm/pm detail panel shown
 var is_vmdp_shown = false;
 var is_pmdp_shown = false;
+
+//
+var is_show_plan = false;
 
 // PIXI.js objects
 var renderer, stage;
@@ -508,6 +516,56 @@ function draw(data) {
 function gen_simulation_init_data(pms_num, vms_num) {
 }
 
+/**
+ * Show
+ */
+function show_plan() {
+    plan = {
+        state0: [],
+        state1: [],
+        delta: [],
+        distance: [],
+        isok: []
+    };
+    for (var i=0; i<dataobj.plan.length; i++) {
+        var pm_num = dataobj.plan[i][0];
+        var pmid = 'pm-' + pm_num;
+        var vmid = 'vm-' + i;
+        var pm = pms[pmid];
+        var vm = vms[vmid];
+        // Get state0 and state1
+        plan.state0.push([pm.x, pm.y]);
+        plan.state1.push([vm.x, vm.y]);
+        // Calcuate the distance and delta
+        plan.distance.push([vm.x - pm.x, vm.y - pm.y]);
+        plan.delta.push([(vm.x - pm.x)/1000, (vm.y - pm.y)/1000]);
+        plan.isok.push(false);
+        vm.x = pm.x;
+        vm.y = pm.y;
+    }
+    // Set is_show_plan
+    is_show_plan = true;
+}
+
+function move_delta_vms() {
+    if (!is_show_plan) { return; }
+    var isok_all = true;
+    for (var i=0; i<plan.state0.length; i++) {
+        if (plan.isok[i]) { continue; }
+        isok_all = false;
+        var vmid = 'vm-' + i;
+        var vm = vms[vmid];
+        vm.x += plan.delta[i][0];
+        vm.y += plan.delta[i][1];
+        plan.distance[i][0] -= plan.delta[i][0];
+        plan.distance[i][1] -= plan.delta[i][1];
+        if (Math.abs(plan.distance[i][0])<0.01 &&
+            Math.abs(plan.distance[i][1])<0.01) {
+            plan.isok[i] = true;
+        }
+    }
+    is_show_plan = !isok_all;
+}
 
 /**
  * Create the scene
@@ -537,7 +595,9 @@ function setup() {
  */
 function game_loop() {
     requestAnimationFrame(game_loop);
-    // other animation of updating status here:
+    // other animation of updating status here
+    // Move VMS
+    move_delta_vms();
 
     renderer.render(stage);
 }
@@ -567,6 +627,9 @@ var config = {
     },
     tour_vms: function() {
         console.log('tour is NOT developed yet');
+    },
+    show_plan: function() {
+        show_plan();
     },
     about: function() {
         console.log('showing about...');
@@ -601,6 +664,7 @@ function init_datgui() {
 
     f3.add(config, 'load_data');
     gui.add(config, 'about');
+    gui.add(config, 'show_plan');
 }
 
 /**
