Add color to dashbaord text
Including:

- Color wrap for dashbaord text
- Message box time updated
- Annotation update

--- a/viz/ver-pixi.js.html
+++ b/viz/ver-pixi.js.html
@@ -68,39 +68,43 @@ html,body { margin:0; padding:0; width:100%; height:100%; overflow-y:hidden; }
   </div><!-- #db-header -->
   <div id="db-content">
     <div class="db-panel">
-      <h3>Costs List</h3>
-        <p><i class="fa fa-flash"></i> Power: <b>13433</b></p>
-        <p><i class="fa fa-cube"></i> # of PM: <b>200</b></p>
-        <p><i class="fa fa-cubes"></i> # of VM: <b>200</b></p>
-        <p><i class="fa fa-plane"></i> # of Mig.: <b>32</b></p>
+      <h3>HSI Cost Start</h3>
+        <p><i class="fa fa-flash"></i> Power: <b id="hsi-start-power">&nbsp;</b></p>
+        <p><i class="fa fa-cogs"></i> 1: <b id="hsi-start-1">&nbsp;</b></p>
+        <p><i class="fa fa-tv"></i> 2: <b id="hsi-start-2">&nbsp;</b></p>
+        <p><i class="fa fa-cubes"></i> # of PM: <b id="hsi-start-pms-num">&nbsp;</b></p>
+    </div><!-- .db-panel -->
+
+    <div class="db-panel">
+      <h3>HSI Cost End</h3>
+        <p><i class="fa fa-flash"></i> Power: <b id="hsi-end-power">&nbsp;</b></p>
+        <p><i class="fa fa-cogs"></i> 1: <b id="hsi-end-1">&nbsp;</b></p>
+        <p><i class="fa fa-tv"></i> 2: <b id="hsi-end-2">&nbsp;</b></p>
+        <p><i class="fa fa-cubes"></i> # of PM: <b id="hsi-end-pms-num">&nbsp;</b></p>
+        <p><i class="fa fa-flash"></i> Reduce P: <b id="hsi-end-power-delta">&nbsp;</b></p>
+        <p><i class="fa fa-cogs"></i> Reduce 1: <b id="hsi-end-1-delta">&nbsp;</b></p>
+        <p><i class="fa fa-tv"></i> Reduce 2: <b id="hsi-end-2-delta">&nbsp;</b></p>
+    </div><!-- .db-panel -->
+
+    <div class="db-panel">
+      <h3>Experiments</h3>
+      <p><i class="fa fa-cube"></i> # of PM: <b id="exp-pms-num">&nbsp;</b></p>
+      <p><i class="fa fa-cubes"></i> # of VM: <b id="exp-vms-num">&nbsp;</b></p>
+      <p><i class="fa fa-ravelry"></i> # of cores: <b id="exp-vms-cores-num">&nbsp;</b></p>
+      <p><i class="fa fa-microchip"></i> # of mems: <b id="exp-vms-mems-num">&nbsp;</b></p>
+      <p><i class="fa fa-database"></i> # of disk: <b id="exp-vms-disk-sum">&nbsp;</b></p>
+      <p><i class="fa fa-sitemap"></i> # of gen.: <b id="exp-generation-num">&nbsp;</b></p>
+      <p><i class="fa fa-truck"></i> # of MV: <b id="mig-plan-num">&nbsp;</b></p>
     </div><!-- .db-panel -->
 
     <div class="db-panel">
       <h3>Performance</h3>
-      <p><i class="fa fa-clock-o"></i> Sim. ETime: <b>00:21:34</b></p>
-      <p><i class="fa fa-clock-o"></i> Est. MTime: <b>00:00:17</b></p>
+      <p><i class="fa fa-clock-o"></i> Start Time: <b id="perf-time-start">20:10:44</b></p>
+      <p><i class="fa fa-clock-o"></i> End Time: <b id="perf-time-end">21:21:36</b></p>
+      <p><i class="fa fa-clock-o"></i> Sim. Time: <b id="perf-time-sim">00:21:34</b></p>
+      <p><i class="fa fa-clock-o"></i> Mig. Time: <b id="perf-time-mig">00:00:17</b></p>
     </div><!-- .db-panel -->
 
-    <div class="db-panel">
-      <h3>Experiment Scale</h3>
-      <p><i class="fa fa-gavel"></i> # of cores: <b>16</b></p>
-      <p><i class="fa fa-microchip"></i> # of mems: <b>8 GB</b></p>
-      <p><i class="fa fa-database"></i> # of disk: <b>13.2 MB</b></p>
-      <p><i class="fa fa-sitemap"></i> # of gen.: <b>5000</b></p>
-    </div>
-
-    <div class="db-panel">
-      <h3>VM Stat.</h3>
-      <p><i class="fa fa-ravelry"></i> core: <b> 1 - 8 </b></p>
-      <p><i class="fa fa-tv"></i> mems: <b>16MB - 8GB</b></p>
-      <p><i class="fa fa-cogs"></i> I/Os: <b> 1 - 100 M/s</b></p>
-    </div>
-
-    <div class="db-panel">
-      <h3>Migration Stat.</h3>
-      <p><i class="fa fa-adjust"></i> # of ST: <b>24</b></p>
-      <p><i class="fa fa-truck"></i> # of MV: <b>27</b></p>
-    </div>
   </div><!-- #db-content -->
 
 </div><!-- #dashboard -->
@@ -132,18 +136,15 @@ html,body { margin:0; padding:0; width:100%; height:100%; overflow-y:hidden; }
 // data object
 var dataobj = null;
 
-// init pm display arguments
+// init pm display arguments, which will be updated when data loaded
 var pms_num = 200;
 var pm_size = 10;
 var pm_num_x = 10;
 var pm_num_y = 10;
-
 var vms_num = 200;
 
-var plan = {
-    state0: [],
-    state1: []
-};
+// store the plan details
+var plan = {};
 
 // colors
 var clr_background = 0x333333;
@@ -158,7 +159,7 @@ var clr_vmbox = 0xA66F00;
 var is_vmdp_shown = false;
 var is_pmdp_shown = false;
 
-//
+// start plan show or not
 var is_show_plan = false;
 
 // PIXI.js objects
@@ -184,8 +185,11 @@ function add0(num, n) {
     return num;
 }
 
+/**
+ * Display message on top of window
+ */
 function msg(m) {
-    $("#msg").html(m);
+    $("#msg").html(m).fadeIn(500).fadeOut(5000);
 }
 
 /**
@@ -479,10 +483,8 @@ function mark_move_vm(vm_num, pm_num_from, pm_num_to) {
 
     // add this ln to global
     mls[vmid] = ln;
-
     stage.addChild(ln);
 }
-
 
 /**
  * Draw according to data
@@ -526,6 +528,9 @@ function draw_pms_vms(data) {
 function gen_simulation_init_data(pms_num, vms_num) {
 }
 
+/**
+ * Init the plan object with location data of pms and vms
+ */
 function plan_init() {
     plan = {
         state0: [],
@@ -555,6 +560,9 @@ function plan_init() {
     msg("INITED TO STATE-INIT");
 }
 
+/**
+ * Toggle display of pmas
+ */
 function toggle_pmas() {
     for (var i=0; i<pms_num; i++) {
         var pmid = 'pm-' + i;
@@ -580,6 +588,10 @@ function show_plan() {
     setTimeout("plan_start()", 3000);
 }
 
+/**
+ * Move vms in plan delta distance
+ * This is the key to the animation of migration
+ */
 function plan_move_vms_by_delta() {
     var isok_all = true;
     for (var i=0; i<plan.state0.length; i++) {
@@ -632,13 +644,10 @@ function setup() {
 function game_loop() {
     requestAnimationFrame(game_loop);
     // other animation of updating status here
-    // show
     if (is_show_plan) { plan_move_vms_by_delta(); }
-
 
     renderer.render(stage);
 }
-
 
 /**
  * Configs and dashboard functions
@@ -723,25 +732,85 @@ function toggle_dashboard(size) {
 }
 
 /**
- * Send request to server to get MBBO result data
+ * Update dashboard data
  */
-function get_mbbo_result(data_url) {
-    // get data and update this viz!
-    $.get(
-        data_url,
-        {},
-        function(data) {
-            // Use this data to update PM/VM detail panel
-            dataobj = data;
-            // Clear all objects on stage
-            stage.removeChildren();
-            // Draw new elements
-            update_global_params(data);
-            draw_pms_vms(data);
-        },'json'
-    );
+function update_dashboard(data) {
+    // HSI Start
+    $('#hsi-start-power').html(
+      _wc(data['HSI_cost'][0][0].toFixed(3), 'deepskyblue'));
+    $('#hsi-start-1').html(data['HSI_cost'][0][1].toFixed(3));
+    $('#hsi-start-2').html(data['HSI_cost'][0][2].toFixed(0));
+    $('#hsi-start-pms-num').html(data['pms_num']);
+    // HSI end
+    $('#hsi-end-power').html(data['HSI_cost'][1][0].toFixed(3));
+    $('#hsi-end-1').html(data['HSI_cost'][1][1].toFixed(3));
+    $('#hsi-end-2').html(data['HSI_cost'][1][2].toFixed(0));
+    $('#hsi-end-pms-num').html(data['pms_num'] - count_pms_unused(data));
+    $('#hsi-end-power-delta').html(
+      _wc((data['HSI_cost'][0][0] - data['HSI_cost'][1][0]).toFixed(3)));
+    $('#hsi-end-1-delta').html(
+      _wc((data['HSI_cost'][0][1] - data['HSI_cost'][1][1]).toFixed(3)));
+    $('#hsi-end-2-delta').html(
+      _wc((data['HSI_cost'][0][2] - data['HSI_cost'][1][2]).toFixed(0)));
+    // Experiments
+    $('#exp-pms-num').html(_wc(data['pms_num'], 'tomato'));
+    $('#exp-vms-num').html(data['vms_num']);
+    $('#exp-vms-cores-num').html(count_vms_usage(data)[0].toFixed(4));
+    $('#exp-vms-mems-num').html(count_vms_usage(data)[1].toFixed(4));
+    $('#exp-vms-disk-sum').html(
+      _wc((data['vms_num']*count_vms_usage(data)[1]).toFixed(4), 'violet'));
+    $('#exp-generation-num').html(data['vms_num']*data['pms_num']);
+    $('#mig-plan-num').html(data['plan'].length);
+    // Performance
+    $('#perf-time-start').html();
+    $('#perf-time-end').html();
+    $('#perf-time-sim').html();
+    $('#perf-time-mig').html();
 }
 
+/**
+ * Wrap color style to a value
+ * @param {Number} val Any number
+ * @param {String} color Any color string or HEX
+ *        for example:
+ *        * color string: red palevioletred indigo saddlebrown sienna darkkhaki
+ *        * HEX value: #FF0000 #B8860B #F4A460 #9370DB #D87093
+ */
+function _wc(val, color) {
+    if (typeof(color)=="undefined") {
+        return val<0? "<span style='color:#FF0000;'>"+val+"</span>" :
+                      "<span style='color:#00FF00;'>"+val+"</span>";
+    } else {
+        return "<span style='color:"+color+";'>"+val+"</span>";
+    }
+}
+
+/**
+ * Calculate how many pms are not used
+ */
+function count_pms_unused(data) {
+    var count = 0;
+    for (var i=0; i<data.state.length; i++) {
+        if (data.state[i] == []) {
+            count ++;
+        }
+    }
+    return count;
+}
+
+/**
+ * Calculate total usage of vms
+ */
+function count_vms_usage(data) {
+    var count_cpu = 0;
+    var count_mem = 0;
+
+    for (var i=0; i<data.vms.length; i++) {
+        count_cpu += data.vms[i][0];
+        count_mem += data.vms[i][1];
+    }
+    return [count_cpu, count_mem];
+}
 /**
  * Change the size of PM and number according to screen size
  */
@@ -788,6 +857,27 @@ function calc_pm_width(pms_num) {
     } else {
         return 10;
     }
+}
+
+/**
+ * Send request to server to get MBBO result data
+ */
+function get_mbbo_result(data_url) {
+    // get data and update this viz!
+    $.get(
+        data_url,
+        {},
+        function(data) {
+            // Use this data to update PM/VM detail panel
+            dataobj = data;
+            // Clear all objects on stage
+            stage.removeChildren();
+            // Draw new elements
+            update_global_params(data);
+            draw_pms_vms(data);
+            update_dashboard(data);
+        },'json'
+    );
 }
 
 // start this viz!
